# SimpleRayTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Notes.md  README.md
include/: Declarations.h  TypeAliases.h  Worlds.h  camera.h  color.h  common.h  config.h  dielectric.h  hittable.h  lambertian.h  material.h  metal.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h
include/AABB/: AABB.h  bvh.h
include/BRDF/: BRDF.h  BSDF.h  BxDF.h  BxDF_Utility.h  Fresnel.h  MatteMaterial.h  Medium.h  MicrofacetDistribution.h  OrenNayar.h  OrenNayer.h  Scaled_BxDF.h  Specular.h  dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h
include/Geometry/: AnimatedTransform.h  GeometricPrimitive.h  Geometry.h  Interaction.h  Light.h  MovingSphere.h  Primitive.h  Scene.h  Shape.h  Transform.h  TriangleMesh.h  Vector.h  Vector3.h  aarect.h  box.h  bvh.h  constant_medium.h  hit_record.h  hittable.h  hittable_list.h  sphere.h  surface_hit_record.h  translation.h
include/Integrators/: DirectLightIntegrator.h  Film.h  Integrator.h  InverseIntegrator.h  OptiXPathIntegrator.h  PathIntegrator.h  SPPM.h  SamplerIntegrator.h  SimpleIntegrator.h  SpectrumIntegrator.h  StokesIntegrator.h  VolPathIntegrator.h
include/Scene/: Scene.h  WorldFactory.h  bvh.h
include/Tools/: Atomic.h  BigInt.h  Bound.h  CoefficientSpecturm.h  Film.h  Filter.h  LowDiscrepency.h  MemoryArena.h  Mueller.h  Parallel.h  Polarized.h  SampledSpectrum.h  Sampler.h  Scenes.h  Texture.h  camera.h  math_tools.h  onb.h  pdf.h  rng.h  (+2 more)
lib/: Geometry.lib  Integrator.lib
src/: CMakeLists.txt  main.cc
(+130 files in other folders)
